# tursi-ai

./: -remote --tags origin  .env.example  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  et --soft HEAD~1  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.cursor/: mcp.json  settings.json
.github/: RELEASE_TEMPLATE.md  dependabot.yml  release-template.md
.github/workflows/: action.yml  changelog.yml  ci.yml  codecov.yml  lint.yml  release.yml  snyk-security.yml  snyk.yml  test.yml  version-bump.yml
docs/: README.md  task_list.md  troubleshooting.md
docs/api/: README.md  endpoints.md
docs/cli/: README.md  commands.md  configuration.md  installation.md
docs/development/: README.md  RELEASE_PROCESS.md
examples/: tursi.yml
scripts/: PRD.txt  bump_version.py  prd.txt  verify_changelog.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
test_env/: pyvenv.cfg
tests/: __init__.py  pytest.ini  test_api.py  test_cli.py  test_daemon.py  test_db.py  test_engine.py  test_integration.py  test_model.py  test_quantization.py  test_server.py
tursi/: __init__.py  api.py  cli.py  daemon.py  db.py  engine.py  model.py  test.py
tursi-engine/: tursi-engine.py
tursi-test/: tursi-test.py
tursi.egg-info/: SOURCES.txt  requires.txt
