[tool.poetry]
name = "tursi"
version = "0.3.0"
description = "A simple framework to deploy AI models locally with one command, no containers needed"
authors = ["Kresna Sucandra <kresnasucandra@gmail.com>"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
packages = [{include = "tursi"}]
repository = "https://github.com/BlueTursi/tursi-ai"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.0"
transformers = "^4.38.0"
torch = "^2.2.1"
python-dotenv = "^1.0.0"
flask-limiter = "^3.5.0"
optimum = "^1.17.0"
accelerate = "^0.27.0"
onnxruntime = "^1.17.0"
onnx = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
black = "^24.0.0"
build = "^1.0.3"
twine = "^4.0.2"

[tool.poetry.scripts]
tursi-engine = "tursi.engine:main"
tursi-test = "tursi.test:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=tursi --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 